--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -21,7 +21,16 @@
         <artifactId>spark-sql_2.12</artifactId>
         <version>3.1.1</version>
     </dependency>
-
+	<dependency>
+    	<groupId>com.crealytics</groupId>
+    	<artifactId>spark-excel_2.12</artifactId>
+    	<version>0.12.3</version>
+	</dependency>
+	<dependency>
+		<groupId> com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-core</artifactId>
+		<version>2.14.1</version>
+	</dependency>
   </dependencies>
 
   <build>
