--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -13,6 +13,16 @@
 
 
   <dependencies>
+    <dependency>
+  		<groupId>org.apache.hadoop</groupId>
+  		<artifactId>hadoop-common</artifactId>
+  		<version>3.1.0</version>
+  	</dependency>
+	<dependency>
+  		<groupId>org.apache.hbase</groupId>
+  		<artifactId>hbase-client</artifactId>
+  		<version>2.0.0</version>
+  	</dependency>
   	<dependency>
   		<groupId>org.apache.spark</groupId>
   		<artifactId>spark-core_2.12</artifactId>
