--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^3.6.5",
     "@vueuse/core": "^9.12.0",
     "autoprefixer": "^10.4.13",
     "tailwindcss": "^3.2.4",
