--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -33,11 +33,6 @@
         <artifactId>spark-sql_2.12</artifactId>
         <version>3.1.1</version>
     </dependency>
-	<dependency>
-		<groupId> com.fasterxml.jackson.core</groupId>
-		<artifactId>jackson-core</artifactId>
-		<version>2.14.1</version>
-	</dependency>
   </dependencies>
 
   <build>
@@ -55,7 +50,7 @@
           			</goals>
 					<configuration>
 						<classifier>CittyTrafficCleaner</classifier>
-						<finalName>${project.artifactId}-Cleaner</finalName>
+						<finalName>Exec</finalName>
   						<archive>
   							<manifest>
   								<mainClass>bigdata.CittyTrafficCleaner</mainClass>
@@ -65,16 +60,16 @@
 				</execution>
 
 				<execution>
-					<id>Data</id>
+					<id>Processing</id>
 					<goals>
             			<goal>jar</goal>
           			</goals>
 					<configuration>
-						<classifier>CittyTrafficData</classifier>
-						<finalName>${project.artifactId}-Data</finalName>
+						<classifier>CittyTrafficProcessing</classifier>
+						<finalName>Exec</finalName>
   						<archive>
   							<manifest>
-  								<mainClass>bigdata.CittyTrafficData</mainClass>
+  								<mainClass>bigdata.CittyTrafficProcessing</mainClass>
   							</manifest>
   						</archive>
   					</configuration>
