--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@vuepic/vue-datepicker": "^3.6.5",
     "@vueuse/core": "^9.12.0",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.3.2",
     "tailwindcss": "^3.2.4",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
