--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -10,10 +10,11 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "hbase": "^0.6.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^1.9.2",
+    "krb5": "^0.5.5",
     "morgan": "~1.9.1"
   }
 }
