--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,12 @@
     "@vueuse/core": "^9.12.0",
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.2",
+    "chart.js": "^4.2.0",
+    "chartjs-adapter-luxon": "^1.3.1",
+    "luxon": "^3.2.1",
     "tailwindcss": "^3.2.4",
     "vue": "^3.2.45",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
