--- a/backend/java/pom.xml
+++ b/backend/java/pom.xml
@@ -7,9 +7,9 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
   <groupId>bigdata</groupId>
-  <artifactId>CittyTraffic</artifactId>
+  <artifactId>CityTraffic</artifactId>
   <version>0.0.1</version>
-  <name>CittyTraffic</name>
+  <name>CityTraffic</name>
 
 
   <dependencies>
@@ -49,11 +49,11 @@
             			<goal>jar</goal>
           			</goals>
 					<configuration>
-						<classifier>CittyTrafficCleaner</classifier>
+						<classifier>CityTrafficCleaner</classifier>
 						<finalName>Exec</finalName>
   						<archive>
   							<manifest>
-  								<mainClass>bigdata.CittyTrafficCleaner</mainClass>
+  								<mainClass>bigdata.CityTrafficCleaner</mainClass>
   							</manifest>
   						</archive>
   					</configuration>
@@ -65,11 +65,11 @@
             			<goal>jar</goal>
           			</goals>
 					<configuration>
-						<classifier>CittyTrafficProcessing</classifier>
+						<classifier>CityTrafficProcessing</classifier>
 						<finalName>Exec</finalName>
   						<archive>
   							<manifest>
-  								<mainClass>bigdata.CittyTrafficProcessing</mainClass>
+  								<mainClass>bigdata.CityTrafficProcessing</mainClass>
   							</manifest>
   						</archive>
   					</configuration>
